Fixed scrollbars-in-scrollbars issue.

--- a/ui/static/smart_ui_server/smart_ui_server.css
+++ b/ui/static/smart_ui_server/smart_ui_server.css
@@ -8,7 +8,7 @@
 /***** Indivo CSS *****/
 
 /*** General ***/
-html {height: 100%; overflow-x: hidden;}
+html {height: 100%; overflow-x: hidden; overflow-y: hidden;}
 
 h2 {margin: 0px; padding: 0px;}
 
